feat: 增加 redis/changelogen/接口等

--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -21,7 +21,7 @@ jobs:
           pnpm install
       - name: 构建项目
         env: 
-          CONTENT_REPO_TOKEN: ${{ vars.CONTENT_REPO_TOKEN }}
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
         run: pnpm build
       - name: 复制到目标目录
         env: 
@@ -32,16 +32,21 @@ jobs:
           cp -R .output/* /root/server/zzclub-base-server/
           cp -R prisma/* /root/server/zzclub-base-server/prisma/
           cp -R ecosystem.config.cjs /root/server/zzclub-base-server/ecosystem.config.cjs
+      # pm2 重启时使用 pm2 restart ecosystem.config.cjs
+      - name: 启动项目
+        env: 
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+        run: |
           cd /root/server/zzclub-base-server
           prisma migrate deploy
-          pm2 restart ecosystem.config.cjs
+          pm2 start ecosystem.config.cjs
       - run: echo "  The ${{ gitea.repository }} repository has been cloned to the runner."
       - run: echo " ️ The workflow is now ready to test your code on the runner."
       - name: List files in the repository
         run: |
           ls ${{ gitea.workspace }}          
       - run: echo "  This job's status is ${{ job.status }}."
-      # 添加 webhook 通知步骤
+      # 飞书消息通知
       - name: Send FeiShu Notification
         if: always()
         run: |
@@ -53,4 +58,4 @@ jobs:
                 "text": "${{ gitea.repository }} - release [${{job.status}}]"
               }
             }' \
-            "${{ vars.FEISHU_WEBHOOK }}"
+            "${{ secrets.FEISHU_WEBHOOK }}"
