--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -38,6 +38,7 @@ jobs:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
         run: |
           cd /root/server/zzclub-base-server
+          npx prisma generate
           prisma migrate deploy
           pm2 start pm2.config.yml
       - run: echo "  The ${{ gitea.repository }} repository has been cloned to the runner."
